--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
 <head>
     <meta charset="utf-8">
@@ -8,36 +8,34 @@
     <script defer src="/assets/theme.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+
+<nav id="navbar">
     <div id="nav-inner">
         <ul id="nav-center">
             <li><a href="/auth/register">Register</a></li>
-            <li><a class="active" href="/auth/login">Login</a></li>
-            <li><a href="/about">About</a></li>
+            <li><a href="/auth/login">Login</a></li>
+            <li><a id="active-link" href="/about">About</a></li>
         </ul>
 
         <div id="dark-mode-switch">
-            <label class="switch">
+            <label id="toggle-switch">
                 <input id="toggle" type="checkbox">
-                <span class="slider round">
-                    <div class="background"></div>
-                    <div class="star"></div>
-                    <div class="star"></div>
+                <span id="slider">
+                    <div id="background"></div>
+                    <div id="star-1"></div>
+                    <div id="star-2"></div>
                 </span>
             </label>
         </div>
     </div>
 </nav>
-<div class="main-container">
-    <div class="explain-about">
-        <h1>About Our Project</h1>
-        <article>
-            We want to optimize your way of organizing your learn experience.
-        </article>
-    </div>
-    <div class="explain-about">
-        <img src="/img/learn.jpg" alt="Bild zur Illustration von Lernen">
-    </div>
-</div>
+
+<main id="about">
+    <h1>About Our Project</h1>
+    <p>We want to optimize your way of organizing your learning experience.</p>
+
+    <img src="/img/learn.jpg" alt="Bild zur Illustration von Lernen">
+</main>
+
 </body>
 </html>
