--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,21 +8,22 @@
     <script defer src="/assets/theme.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+
+<nav id="navbar">
     <div id="nav-inner">
         <ul id="nav-center">
-            <li><a href="/auth/register">Register</a></li>
-            <li><a class="active" href="/auth/login">Login</a></li>
+            <li><a id="active-link" href="/auth/register">Register</a></li>
+            <li><a href="/auth/login">Login</a></li>
             <li><a href="/about">About</a></li>
         </ul>
 
         <div id="dark-mode-switch">
-            <label class="switch">
+            <label id="toggle-switch">
                 <input id="toggle" type="checkbox">
-                <span class="slider round">
-                    <div class="background"></div>
-                    <div class="star"></div>
-                    <div class="star"></div>
+                <span id="slider">
+                    <div id="background"></div>
+                    <div id="star-1"></div>
+                    <div id="star-2"></div>
                 </span>
             </label>
         </div>
@@ -30,7 +31,7 @@
 </nav>
 
 <% if (error) { %>
-    <div class="error-message">
+    <div id="error-message">
         <% if (error === 'invalid') { %>
             Ungültiger Benutzername oder Passwort.
         <% } else if (error === 'required') { %>
@@ -49,32 +50,37 @@
     </div>
 <% } %>
 
-<% if (success === 'logout') { %>
-    <div class="success-message">
-        Sie wurden erfolgreich abgemeldet.
+<% if (success) { %>
+    <div id="success-message">
+        <% if (success === 'logout') { %>
+            Sie wurden erfolgreich abgemeldet.
+        <% } else { %>
+            Erfolgreich.
+        <% } %>
     </div>
 <% } %>
-<div class="register-form">
-    <h1>Register</h1>
-    <form method="POST" action="/auth/login">
 
+<div id="login-form">
+    <h1>Register</h1>
+    <form method="POST" action="/auth/register">
         <label for="prename">Vorname *</label>
         <input id="prename" name="prename" type="text" required autofocus>
 
         <label for="lastname">Nachname *</label>
-        <input id="lastname" name="lastname" type="text" required autofocus>
+        <input id="lastname" name="lastname" type="text" required>
 
         <label for="username">Benutzername *</label>
-        <input id="username" name="username" type="text" required autofocus>
+        <input id="username" name="username" type="text" required>
 
         <label for="passwordone">Passwort *</label>
         <input id="passwordone" name="passwordone" type="password" required>
 
-        <label for="passwordtwo">Passwort bestätigen*</label>
+        <label for="passwordtwo">Passwort bestätigen *</label>
         <input id="passwordtwo" name="passwordtwo" type="password" required>
 
         <button type="submit">Registrieren</button>
     </form>
 </div>
+
 </body>
 </html>
